// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-cost-query - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Query and analyze historical Azure cost data using the Cost Management Query API. Construct API requests to break down costs by service, resource, location, or tag across subscriptions, resource groups, and billing accounts. WHEN: query Azure costs, cost breakdown by service, Azure spending, cost by resource group, actual cost, amortized cost, cost trends, top cost drivers, cost by subscription, how much did I spend, show my Azure bill, cost by tag, monthly cost summary. DO NOT USE FOR: forecasting future costs (use azure-cost-forecast), reducing costs or optimization recommendations (use azure-cost-optimization).",
  "extractedKeywords": [
    "accounts",
    "across",
    "actual",
    "amortized",
    "analyze",
    "authentication",
    "azure",
    "azure-cost-forecast",
    "azure-cost-optimization",
    "bill",
    "billing",
    "break",
    "breakdown",
    "cli",
    "construct",
    "cost",
    "costs",
    "data",
    "down",
    "drivers",
    "forecasting",
    "function",
    "future",
    "group",
    "groups",
    "historical",
    "location",
    "management",
    "mcp",
    "monthly",
    "much",
    "optimization",
    "query",
    "recommendations",
    "reducing",
    "requests",
    "resource",
    "service",
    "show",
    "spend",
    "spending",
    "subscription",
    "subscriptions",
    "summary",
    "trends",
    "using",
    "validation",
    "when",
  ],
  "name": "azure-cost-query",
}
`;

exports[`azure-cost-query - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "accounts",
  "across",
  "actual",
  "amortized",
  "analyze",
  "authentication",
  "azure",
  "azure-cost-forecast",
  "azure-cost-optimization",
  "bill",
  "billing",
  "break",
  "breakdown",
  "cli",
  "construct",
  "cost",
  "costs",
  "data",
  "down",
  "drivers",
  "forecasting",
  "function",
  "future",
  "group",
  "groups",
  "historical",
  "location",
  "management",
  "mcp",
  "monthly",
  "much",
  "optimization",
  "query",
  "recommendations",
  "reducing",
  "requests",
  "resource",
  "service",
  "show",
  "spend",
  "spending",
  "subscription",
  "subscriptions",
  "summary",
  "trends",
  "using",
  "validation",
  "when",
]
`;
